fixed spacing on moble seperator rows

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,10 +178,13 @@ text-align: center;
 nav i.material-icons {
     color: $laker-gold;
 }
-/*.brand-logo {/
+#nav-mobile li {
+    padding: 0 10% 0 0;
+}
+.brand-logo {
     position: relative;
     margin-top: 2em;
-}*/
+}
 svg image {
     fill: #1976d2;
 }
